final fix responsive, correction of spacing box

--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -1,6 +1,8 @@
 body {
 	font-family: "Nunito", sans-serif;
 	background-color: white;
+	margin: 0;
+	padding: 0;
 }
 
 .navbar.scrolled {
@@ -29,6 +31,8 @@ body {
 #mainNavbar {
 	font-size: 1.5rem;
 	font-weight: 100;
+	width: 100%;
+	
 }
 
 #mainNavbar .nav-link {
@@ -52,10 +56,13 @@ body {
 }
 
 footer {
+	display: block;
 	background-color: rgba(87, 10, 117, 0.795);
 	color: #f1eaed;
-	width:100%;
-	margin:0;
+	margin-right: 0;
+	width: 100%;
+    height: 100%;
+
 }
 
 footer a {
